Funciones/.metadata/.plugins/org.eclipse.cdt.ui/3-7_Funcion_Validar_Inputs.build.log
15:41:42 **** Incremental Build of configuration Debug for project 3-7_Funcion_Validar_Inputs ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\3-7_Funcion_Validar_Inputs.o" "..\\src\\3-7_Funcion_Validar_Inputs.c" 
..\src\3-7_Funcion_Validar_Inputs.c: In function 'main':
..\src\3-7_Funcion_Validar_Inputs.c:36:7: warning: implicit declaration of function 'isdigit' [-Wimplicit-function-declaration]
   36 |   if (isdigit(numero[2]) == 0) {
      |       ^~~~~~~
..\src\3-7_Funcion_Validar_Inputs.c:36:21: error: subscripted value is neither array nor pointer nor vector
   36 |   if (isdigit(numero[2]) == 0) {
      |                     ^

15:41:42 Build Failed. 1 errors, 1 warnings. (took 191ms)

